@@ -4,6 +4,7 @@ trunk
 * added 'cache' and 'cacheBack' arguments to mxEval()
 * bugfix for interaction of matrix transpose and square bracket substitution
 * added 'name=' argument to omxSetParameters()
+* improved error messages when a free parameter has multiple lbounds/ubounds
 
 Release 1.2.0-1926 (February 04, 2012)
 ======================================
